create service list

--- a/src/app/service/service-initializer/service-initializer.component.html
+++ b/src/app/service/service-initializer/service-initializer.component.html
@@ -1,3 +1,17 @@
-<p>
-  service-initializer works!
-</p>
+<div class="wrapper wrapper-content">
+
+  <div class="row">
+    <div class="ibox float-e-margins">
+      <div class="ibox-title">
+        <h5>Service Initializer</h5>
+      </div>
+
+
+      <div class="ibox-content">
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
