--- a/src/app/service/service-list/service-list.component.html
+++ b/src/app/service/service-list/service-list.component.html
@@ -1,3 +1,63 @@
-<p>
-  service-list works!
-</p>
+<div class="wrapper wrapper-content">
+
+  <div class="row">
+    <div class="ibox float-e-margins">
+      <div class="ibox-title">
+        <h5>Service List</h5>
+      </div>
+
+
+      <div class="ibox-content">
+        <div class="row">
+          <a (click)="addNewService()"><button class="btn button-shadow button-margin btn-create" type="button"><i class="fa fa-paste"></i>  Create Service</button></a>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <table class="table dataTables-example table-hover" datatable [dtOptions]="dtOptions">
+              <thead>
+              <tr>
+                <th>Name</th>
+                <th>Action</th>
+              </tr>
+              </thead>
+              <tbody *ngIf="services?.length != 0">
+              <tr *ngFor="let service of services">
+                <td>{{ service.name }}</td>
+                <td>
+                  <a title="Edit Service">
+                    <button type="button" class="btn button-shadow btn-edit">
+                      <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                    </button>
+                  </a>
+
+                  <a title="Edit as Text">
+                    <button type="button" class="btn button-shadow btn-show">
+                      <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                    </button>
+                  </a>
+
+                  <a title="View Diagram">
+                    <button type="button" class="btn button-shadow btn-show">
+                      <span class="fa fa-area-chart" aria-hidden="true"></span>
+                    </button>
+                  </a>
+
+                </td>
+              </tr>
+              </tbody>
+              <tbody *ngIf="services?.length == 0">
+              <tr>
+                <td colspan="3" class="no-data-available">No data!</td>
+              </tr>
+              <tbody>
+            </table>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
