--- a/src/app/_layout/app/main/footer/footer.component.html
+++ b/src/app/_layout/app/main/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer">
   <div class="pull-right">
-    © 2018 All rights reserved. By <a href="https://accio.lk/"><strong>Accio (PVT) Ltd.</strong></a>
+    © 2019 All rights reserved. By <a href="https://dialog.lk/"><strong>Dialog</strong></a>
   </div>
 </div>
