Implemented get all feature.

--- a/src/app/service/service-list/service-list.component.html
+++ b/src/app/service/service-list/service-list.component.html
@@ -45,8 +45,11 @@
 
                 </td>
               </tr>
+
+
+
               </tbody>
-              <tbody *ngIf="services?.length == 0">
+              <tbody *ngIf="services.length == 0">
               <tr>
                 <td colspan="3" class="no-data-available">No data!</td>
               </tr>
