--- a/src/app/service/service-initializer/service-assign-block/service-assign-block.component.html
+++ b/src/app/service/service-initializer/service-assign-block/service-assign-block.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="assignBlockForm">
+<!--<form [formGroup]="assignBlockForm">
   <div class="row">
     <div class="col-sm-4">
       <div class="form-group">
@@ -22,10 +22,18 @@
   <div class="row">
     <button type="button" class="btn button-shadow button-margin btn-save-update" (click)="addBlock()">Add Service</button>
   </div>
-</form>
+</form>-->
 
-<json-schema-form
+<!--<json-schema-form
   loadExternalAssets="true"
   [(ngModel)]="exampleJsonObject">
-</json-schema-form>
+</json-schema-form>-->
 
+<div class="form-group">
+<json-schema-form
+  loadExternalAssets="false"
+  [schema]="jsonSchemaForm"
+  framework="bootstrap-4"
+  >
+</json-schema-form>
+</div>
