--- a/src/app/service/service-initializer/service-assign-block/service-assign-block.component.html
+++ b/src/app/service/service-initializer/service-assign-block/service-assign-block.component.html
@@ -1,38 +1,8 @@
-<!--<form [formGroup]="assignBlockForm">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="form-group">
-        <label class="col-sm-4 control-label">Name</label>
-        <div class="col-sm-8">
-          <input type="text" class="form-control" formControlName="name" name="name" id="name">
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-4">
-      <div class="form-group">
-        <label class="col-sm-4 control-label">Value</label>
-        <div class="col-sm-8">
-          <textarea class="form-control" width="100%" formControlName="value" name="value" id="value"></textarea>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <button type="button" class="btn button-shadow button-margin btn-save-update" (click)="addBlock()">Add Service</button>
-  </div>
-</form>-->
-
-<!--<json-schema-form
-  loadExternalAssets="true"
-  [(ngModel)]="exampleJsonObject">
-</json-schema-form>-->
 
 <json-schema-form
   loadExternalAssets="false"
   [schema]="jsonSchemaForm"
   framework="bootstrap-4"
-  >
+  (onSubmit)="addToFlow($event)">
 </json-schema-form>
 
