--- a/src/app/service/service-initializer/service-initializer.component.html
+++ b/src/app/service/service-initializer/service-initializer.component.html
@@ -18,11 +18,11 @@
           <p class="small"><i class="fa fa-hand-o-up"></i> Drag task between list</p>
 
           <div class="form-group">
-              <input type="text" placeholder="Block Id" [(ngModel)]="blockId" class="form-control">
+            <input type="text" placeholder="Block Id" [(ngModel)]="blockId" class="form-control">
           </div>
 
           <div class="form-group">
-            <select name="" id="" class="form-control" (change)="addNewBlock($event.target.value)">
+            <select name="" id="" class="form-control" [(ngModel)]="blockType" (change)="addNewBlock($event.target.value)">
               <option [value]="0">-Select-</option>
               <option [value]="1">Assign</option>
               <option [value]="2">Function</option>
@@ -31,21 +31,36 @@
 
           <ul class="sortable-list connectList agile-list ui-sortable">
 
+            mainJson
 
-            <li class="success-element" id="task7" cdkDrag>
-              Many desktop publishing packages and web page editors now use Lorem Ipsum as their default.
-              <div class="agile-detail">
-                <a href="#" class="pull-right btn btn-xs btn-white">Mark</a>
-                <i class="fa fa-clock-o"></i> 05.04.2015
+
+            <li *ngFor="let node of nodeList" class="success-element" cdkDrag>
+              <div class="row">
+
+                <div class="col-sm-2" style="font-size: 47px;">
+                  <i class="{{node.styleClass}}"></i>
+                </div>
+
+
+                <div class="col-sm-10">
+                  <label>Block Name : </label> {{node.nextBlockId}}
+                  <br>
+                  <label>Block Id : </label> {{node.blockId}}
+                  <br>
+                  <label>Next Block Id : </label> {{node.nextBlockId}}
+                  <br>
+                  <label>Description : </label> {{node.description}}
+                  <br>
+                  <div class="agile-detail">
+                    <a href="#" class="pull-right btn btn-xs btn-white">Mark</a>
+                    <i class="fa fa-clock-o"></i> 05.04.2015
+                  </div>
+
+                </div>
               </div>
+
             </li>
-            <li class="info-element" id="task8" cdkDrag>
-              Sometimes by accident, sometimes on purpose (injected humour and the like).
-              <div class="agile-detail">
-                <a href="#" class="pull-right btn btn-xs btn-white">Mark</a>
-                <i class="fa fa-clock-o"></i> 16.11.2015
-              </div>
-            </li>
+
           </ul>
 
         </div>
@@ -56,9 +71,8 @@
       <div class="ibox">
         <div class="ibox-content">
 
-          <app-service-assign-block *ngIf="block == 1" (assignBlockJson)="getAssignBlockJson($event)"></app-service-assign-block>
-
-          <app-service-function-block *ngIf="block == 2"></app-service-function-block>
+          <app-service-assign-block *ngIf="blockType == '1'" (assignBlockJson)="getAssignBlockJson($event)"></app-service-assign-block>
+          <app-service-function-block *ngIf="blockType == '2'"></app-service-function-block>
 
         </div>
       </div>
