--- a/src/app/service/service-initializer/service-function-block/service-function-block.component.html
+++ b/src/app/service/service-initializer/service-function-block/service-function-block.component.html
@@ -1,3 +1,6 @@
-<p>
-  service-function-block works!
-</p>
+<json-schema-form
+  loadExternalAssets="false"
+  [schema]="jsonSchemaForm"
+  framework="bootstrap-4"
+  (onSubmit)="addToFlow($event)">
+</json-schema-form>
