--- a/src/assets/css/mystyle.css
+++ b/src/assets/css/mystyle.css
@@ -123,10 +123,10 @@
   color: #FFFFFF !important;
 }
 
-input {
-  text-transform:uppercase;
-}
+/*input {*/
+  /*text-transform:uppercase;*/
+/*}*/
 
-textarea {
-  text-transform:uppercase;
-}
+/*textarea {*/
+  /*text-transform:uppercase;*/
+/*}*/
