--- a/src/app/service/service-initializer/service-initializer.component.html
+++ b/src/app/service/service-initializer/service-initializer.component.html
@@ -18,20 +18,19 @@
           <p class="small"><i class="fa fa-hand-o-up"></i> Drag task between list</p>
 
           <div class="form-group">
-            <input type="text" placeholder="Block Id" [(ngModel)]="blockId" class="form-control">
+            <input type="text" placeholder="SERVICE NAME" [(ngModel)]="serviceName" class="form-control">
           </div>
 
           <div class="form-group">
-            <select name="" id="" class="form-control" [(ngModel)]="blockType" (change)="addNewBlock($event.target.value)">
-              <option [value]="0">-Select-</option>
-              <option [value]="1">Assign</option>
-              <option [value]="2">Function</option>
+            <select name="" id="" class="form-control" [(ngModel)]="blockType" (change)="addNewBlock()">
+              <option value="" selected="selected">-SELECT-</option>
+              <option *ngFor="let item of data" [ngValue]="item">{{item.name}}</option>
             </select>
           </div>
 
           <ul class="sortable-list connectList agile-list ui-sortable">
 
-            mainJson
+            <!--mainJson-->
 
 
             <li *ngFor="let node of nodeList" class="success-element" cdkDrag>
@@ -43,11 +42,10 @@
 
 
                 <div class="col-sm-10">
-                  <label>Block Name : </label> {{node.nextBlockId}}
                   <br>
-                  <label>Block Id : </label> {{node.blockId}}
+                  <label>Block Id : </label> {{node.id}}
                   <br>
-                  <label>Next Block Id : </label> {{node.nextBlockId}}
+                  <label>Next Block Id : </label> {{node.nextNode}}
                   <br>
                   <label>Description : </label> {{node.description}}
                   <br>
@@ -71,8 +69,8 @@
       <div class="ibox">
         <div class="ibox-content">
 
-          <app-service-assign-block *ngIf="blockType == '1'" (assignBlockJson)="getAssignBlockJson($event)"></app-service-assign-block>
-          <app-service-function-block *ngIf="blockType == '2'"></app-service-function-block>
+          <app-service-assign-block *ngIf="blockTypeName == 'ASSIGN'" (assignBlockJson)="getBlockJson($event,'ASSIGN','fa fa-terminal')"></app-service-assign-block>
+          <app-service-function-block *ngIf="blockTypeName == 'FUNCTION'" (functionBlockJson)="getBlockJson($event,'FUNCTION','fa fa-branch')"></app-service-function-block>
 
         </div>
       </div>
