--- a/src/app/service/service-initializer/service-assign-block/service-assign-block.component.html
+++ b/src/app/service/service-initializer/service-assign-block/service-assign-block.component.html
@@ -3,6 +3,7 @@
   loadExternalAssets="false"
   [schema]="jsonSchemaForm"
   framework="bootstrap-4"
+  [(data)]="schemaData"
   (onSubmit)="addToFlow($event)">
 </json-schema-form>
 
