--- a/src/app/service/service-initializer/service-function-block/service-function-block.component.html
+++ b/src/app/service/service-initializer/service-function-block/service-function-block.component.html
@@ -2,5 +2,6 @@
   loadExternalAssets="false"
   [schema]="jsonSchemaForm"
   framework="bootstrap-4"
+  [(data)]="dataObject"
   (onSubmit)="addToFlow($event)">
 </json-schema-form>
