--- a/src/app/service/service-initializer/service-function-block/service-function-block.component.html
+++ b/src/app/service/service-initializer/service-function-block/service-function-block.component.html
@@ -3,5 +3,6 @@
   [schema]="jsonSchemaForm"
   framework="bootstrap-4"
   [(data)]="dataObject"
-  (onSubmit)="addToFlow($event)">
+  (onSubmit)="addToFlow($event)"
+  (onChanges)="getClass($event)">
 </json-schema-form>
