Added json schema form

--- a/src/app/service/service-initializer/service-branch-block/service-branch-block.component.html
+++ b/src/app/service/service-initializer/service-branch-block/service-branch-block.component.html
@@ -2,8 +2,6 @@
   loadExternalAssets="false"
   [schema]="jsonSchemaForm"
   framework="bootstrap-4"
-  [(data)]="dataObject"
-  (onSubmit)="addToFlow($event)"
-  (onChanges)="getClass($event)">
+  [(data)]="schemaData"
+  (onSubmit)="addToFlow($event)">
 </json-schema-form>
-
