--- a/src/app/service/service-initializer/service-initializer.component.html
+++ b/src/app/service/service-initializer/service-initializer.component.html
@@ -138,9 +138,12 @@
       <div class="ibox">
         <div class="ibox-content">
 
-          <app-test-drag *ngIf="blockTypeName == 'DRAG'"></app-test-drag>
-          <app-service-assign-block *ngIf="blockTypeName == 'ASSIGN'" (schemaData)="nodeData" (assignBlockJson)="createAssignNodeDataObject($event, 'ASSIGN', 'fa fa-terminal')"></app-service-assign-block>
-          <app-service-function-block *ngIf="blockTypeName == 'FUNCTION'" (functionBlockJson)="createAssignNodeDataObject($event,'FUNCTION','fa fa-branch')"></app-service-function-block>
+          <!--<app-test-drag *ngIf="blockTypeName == 'DRAG'"></app-test-drag>-->
+          <app-service-assign-block *ngIf="blockTypeName == 'ASSIGN'" (schemaData)="nodeData" (assignBlockJson)="createAssignNodeDataObject($event, 'ASSIGN', 'fa fa-stack-overflow')"></app-service-assign-block>
+          <app-service-function-block *ngIf="blockTypeName == 'FUNCTION'" (functionBlockJson)="createAssignNodeDataObject($event,'FUNCTION','fa fa-cubes')"></app-service-function-block>
+          <app-service-branch-block *ngIf="blockTypeName == 'BRANCH'" (branchBlockJson)="createAssignNodeDataObject($event,'BRANCH','fa fa-code-fork')"></app-service-branch-block>
+          <app-service-default-block *ngIf="blockTypeName == 'DEFAULT'" (defaultBlockJson)="createAssignNodeDataObject($event,'DEFAULT','fa fa-delicious')"></app-service-default-block>
+          <app-service-return-block *ngIf="blockTypeName == 'RETURN'" (returnBlockJson)="createAssignNodeDataObject($event,'RETURN','fa fa-share-square-o')"></app-service-return-block>
 
         </div>
       </div>
