SR-65: conflict resolve

--- a/src/app/service/service-initializer/service-initializer.component.css
+++ b/src/app/service/service-initializer/service-initializer.component.css
@@ -14,3 +14,11 @@
   width: 45px;
   margin: 5px;
 }
+
+.node-bg {
+  background-color: cadetblue;
+  margin-bottom: 3px;
+}
+.node-active-true {
+  background-color: #2aca76 !important;
+}
