--- a/src/app/service/service-initializer/service-assign-block/service-assign-block.component.html
+++ b/src/app/service/service-initializer/service-assign-block/service-assign-block.component.html
@@ -1,9 +1,10 @@
-
+<input type="button" (click)="checkData()" value="Test Data"/>
 <json-schema-form
   loadExternalAssets="false"
   [schema]="jsonSchemaForm"
   framework="bootstrap-4"
-  [(data)]="schemaData"
+  [data]="schemaData"
   (onSubmit)="addToFlow($event)">
 </json-schema-form>
+
 
