change service creator ui

--- a/src/app/service/service-initializer/service-initializer.component.css
+++ b/src/app/service/service-initializer/service-initializer.component.css
@@ -20,5 +20,5 @@
   margin-bottom: 3px;
 }
 .node-active-true {
-  background-color: #2aca76 !important;
+  background-color: #23c6c84a !important;
 }
